--- a/Css/Sass/body.sass
+++ b/Css/Sass/body.sass
@@ -26,3 +26,15 @@ div.circle-img-box.small
 img.rounded 
 	border-radius: 50% 
 
+.centered 
+	align-content: center 
+	text-align: center 
+	display: flex
+	align-items: center 
+	justify-content: center
+
+
+.text-center
+	align-content: center
+	text-align: center  !important
+
