Badges terminado, falta personalizar la posicion en la que aparecen, esto es debido a que su uso depende de las Li, tables, navbar y demas, asi que por ahora solo el diseño inicial esta finalizado

--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -111,6 +111,14 @@ div.cr.button
 	&:hover 
 		background: $blue
 		color: $white
+	
+.cr.button.outline.yellow 
+	background: none
+	border: 1px solid $yellow
+	color: $yellow
+	&:hover 
+		background: $yellow
+		color: $black
 
 .cr.button.outline.green 
 	background: none 
@@ -243,6 +251,10 @@ div.cr.button
 .cr.button.black
 	background: $black
 	color: $white 
+
+.cr.button.yellow
+	background: $yellow
+	color: $black 
 
 
 .cr.button.teal
@@ -445,6 +457,77 @@ button.cr.button.float
 	&:active 
 		background-color: darken($accent, 10)
 		box-shadow: 0 6px 12px $gray
+
+button.cr.button.float.blue 
+	background-color: $blue 
+	&:active 
+		background-color: darken($blue, 10) 
+button.cr.button.float.red 
+	background-color: $red 
+	&:active 
+		background-color: darken($red, 10) 
+
+button.cr.button.float.yellow 
+	background-color: $yellow 
+	color: $black
+	&:active 
+		background-color: darken($yellow, 10) 
+
+button.cr.button.float.amber 
+	background-color: $amber 
+	&:active 
+		background-color: darken($amber, 10) 
+
+
+button.cr.button.float.green 
+	background-color: $green 
+	&:active 
+		background-color: darken($green, 10) 
+
+
+button.cr.button.float.indigo 
+	background-color: $indigo 
+	&:active 
+		background-color: darken($indigo, 10) 
+
+
+button.cr.button.float.purple 
+	background-color: $purple 
+	&:active 
+		background-color: darken($purple, 10) 
+
+
+button.cr.button.float.gold 
+	background-color: $gold 
+	&:active 
+		background-color: darken($gold, 10) 
+
+
+button.cr.button.float.teal 
+	background-color: $teal 
+	&:active 
+		background-color: darken($teal, 10) 
+
+
+button.cr.button.float.pink 
+	background-color: $pink 
+	&:active 
+		background-color: darken($pink, 10) 
+
+
+button.cr.button.float.black 
+	background-color: $black
+	&:active 
+		background-color: darken($black, 10) 
+
+button.cr.button.float.white 
+	background-color: darken($white, 3)
+	color: $black 
+	&:active 
+		background-color: darken($white, 10) 
+
+
+
 
 button.dark-bg
 	box-shadow: none !important
