--- a/Css/Sass/chips.sass
+++ b/Css/Sass/chips.sass
@@ -15,7 +15,7 @@ div.cr.chip
 	padding: 4px 10px 10px 25px
 	overflow: hidden
 	text-align: center
-
+	
 	div.content 
 		position: relative 
 		padding: 0 10px 10px 0px 
@@ -50,31 +50,102 @@ div.cr.chip
 		font-size: 12px
 		margin-left: 10px
 
-
 div.cr.chip.blue 
 	background: $blue 
-	color: $white 
 	border-color: lighten($blue, 15)
+	i 
+		color: $white 
+	.content 
+		color: $white 
 	&:after 
 		border-color: lighten($blue, 15)
 
 div.cr.chip.red 
 	background: $red 
-	color: $white 
 	border-color: lighten($red, 15)
+	i 
+		color: $white 
+	.content 
+		color: $white 
 	&:after 
 		border-color: lighten($red, 15)
 
 div.cr.chip.amber 
 	background: $amber 
-	color: $white 
 	border-color: lighten($amber, 15)
+	i 
+		color: $white 
+	.content 
+		color: $white
 	&:after 
 		border-color: lighten($amber, 15)
 
 div.cr.chip.green 
 	background: $green 
-	color: $white 
 	border-color: lighten($green, 15)
+	i 
+		color: $white 
+	.content 
+		color: $white
 	&:after 
 		border-color: lighten($green, 15)
+
+div.cr.chip.indigo 
+	background: $indigo 
+	border-color: lighten($indigo, 15)
+	i 
+		color: $white 
+	.content 
+		color: $white
+	&:after 
+		border-color: lighten($indigo, 15)
+
+div.cr.chip.pink 
+	background: $pink 
+	border-color: lighten($pink, 15)
+	i 
+		color: $white 
+	.content 
+		color: $white
+	&:after 
+		border-color: lighten($pink, 15)
+
+div.cr.chip.black 
+	background: $black 
+	border-color: lighten($black, 15)
+	i 
+		color: $white 
+	.content 
+		color: $white
+	&:after 
+		border-color: lighten($black, 15)
+
+div.cr.chip.yellow 
+	background: darken($yellow, 15)
+	border-color: $yellow
+	i 
+		color: $white 
+	.content 
+		color: $white 	
+	&:after 
+		border-color: lighten($yellow, 15)
+
+div.cr.chip.gold 
+	background: $gold 
+	border-color: lighten($gold, 15)
+	i 
+		color: $white 
+	.content 
+		color: $white
+	&:after 
+		border-color: lighten($gold, 15)
+
+div.cr.chip.purple 
+	background: $purple 
+	border-color: lighten($purple, 15)
+	i 
+		color: $white 
+	.content 
+		color: $white
+	&:after 
+		border-color: lighten($purple, 15)
